--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style/universal.css" />
     <link rel="stylesheet" href="style/index.css" />
     <!-- 引入 functional.js 加入时间显示代码 -->
-    <script src="js/functional.js" />
+    <script src="js/functional.js"></srcipt>
 </head>
 
 <body>  
