--- a/about.html
+++ b/about.html
@@ -8,8 +8,7 @@
     <link rel="stylesheet" href="style/universal.css" />
     <link rel="stylesheet" href="style/about.css" />
     <!-- 引入 functional.js 加入时间显示代码 -->
-    <script src="js/functional.js">
-    </script>
+    <script src="js/functional.js"></script>
 </head>
 <body>  
     <header class="hhhhd" role="banner">
